--- a/gamemap/style.css
+++ b/gamemap/style.css
@@ -2,32 +2,29 @@
 /* CSS Document */
 
 body { 
-	margin: 0; padding: 0; height: 100%; width:100%; font-size:13px;
+	margin: 0; padding: 0; width:100%; font-size:13px;
 	color: #656565;
-	
 	font-family:Arial, sans-serif;
 	
 }
-
-body div {
-	
+h3 {
+	font:Arial, Helvetica, sans-serif;
+	font-size:14px;
 }
 
-a {
-	text-decoration:none;
+header {
+	width:100%;
+	height:30px;
+	background-color:#6CF;
+	z-index:4;
 }
 
-strong a{
-	background-color: #E30613;
-	color: white;
-	padding: 1px 3px 2px 3px;
+footer {
+	width:100%;
+	height:150px;
+	background-color:#FC9;
 }
 
-
-p, ul{
-	margin:8px;
-	line-height:1.4em;
-}
 
 .control {
 	border-radius: 3px;
@@ -42,24 +39,6 @@ p, ul{
 	box-shadow:inset .8px 1.2px 2px #333;
 }
 
-.slider {
-	position: relative;
-	height: 25px;
-	background: #EEE;
-	margin:6px 0;
-}
-.slider .handle {
-	position: absolute;
-	width: 80px;
-	background: #E30613;
-	line-height: 23px;
-	border-color: #C00107;
-}
-.slider .handle:hover {
-	background-color:#D30107;
-	border-color: #B00104;
-}
-	
 .btn {
 	font-size:14px;
 	padding:4px 10px;
@@ -72,41 +51,6 @@ p, ul{
 .btn:hover{
 	background-color:#3079ED;
 	border-color: #1562D5;
-}
-
-#inText {
-	width: 60%;
-	padding:3px;
-	font-size:20px;
-}
-
-#graphs
-{
-	width:80%;
-}
-
-#graphs a{
-	display:inline-block;
-	margin:2px;
-	padding:7px 10px;
-	font-size: 17px;
-	text-decoration: none;
-	font-weight: bold;
-	color: #656565;
-}
-
-#graphs a:hover{
-	background-color: #e7e7e7;
-	border-radius: 10px;
-}
-
-
-hr{
-	width:85%;
-	margin:30px auto;
-	border:none;
-	height:1px;
-	background-color: #ddd;
 }
 
 /*For focus.js*/
