--- a/gamemap/style.css
+++ b/gamemap/style.css
@@ -47,4 +47,7 @@ footer {
 	border-color: #1562D5;
 }
 
-/*For focus.js*/
+
+#pastnotemenu{width:100%;list-style:none;padding:0;margin:0;top:0;position:absolute;height:100%;width:300px;z-index:inherit;}
+#pastnotemenu li{padding:4px 0;text-align:left;display:block;cursor:hand;cursor:pointer;z-index:inherit;}
+#pastnotemenu li p{background:url() repeat #1f1f1f;color:#ddd;font-family:helvetica,arial,verdana;font-size:9px;font-weight:900;display:inline;padding:5px 8px 5px 5px;text-decoration:none;z-index:inherit;}
