--- a/gamemap/style.css
+++ b/gamemap/style.css
@@ -31,19 +31,47 @@ footer {
 	border-width:1px;
 	cursor: pointer;
 	border-style:solid;
+	border-color:#000066;
 	margin:5px 5px 3px 5px;
 	color: #FFF;
-	background:#664;
+	background:#33F;
 	text-align: center;
 }
 
 .btn:hover{
 	box-shadow:inset .8px 1.2px 2px #333;
-	background:#36C;
+	background:#FFF;
+	color: #33F;
 }
 
+#ui-datepicker-div, .ui-datepicker{ font-size: 80%; }
 
+.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
 
+.ui-timepicker-div dl { text-align: left; }
+
+.ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
+
+.ui-timepicker-div dl dd { margin: 0 10px 10px 65px; }
+
+.ui-timepicker-div td { font-size: 90%; }
+
+.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }
+
+#eventmaker {
+	width:300px;
+	height:330px;
+	z-index:5;
+	position:absolute;
+	left:300px;
+	top: 100px;
+	background:#39F;
+	-moz-box-shadow: 3px 3px 4px #CCC;
+	-webkit-box-shadow: 3px 3px 4px #CCC;
+	box-shadow: 3px 3px 4px #CCC;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+}
 
 #pastnotemenu{width:100%;list-style:none;padding:0;margin:0;top:0;position:absolute;height:100%;width:300px;z-index:inherit;}
 #pastnotemenu li{padding:4px 0;text-align:left;display:block;cursor:hand;cursor:pointer;z-index:inherit;}
