--- a/gamemap/profileStyle.css
+++ b/gamemap/profileStyle.css
@@ -1,90 +1,127 @@
 @charset "utf-8";
 /* CSS Document */
 
-
-.miniProfile
-{
-	float: right;
-	width:300px;
-	height:210px;
+#profile{
+	width:250px;
+	height:160px;
 	position:absolute;
-	right:10px;
+	background:#c3c7ff;
+	right:30px;
+	top:50px;
+	-moz-box-shadow: 3px 3px 4px #CCC;
+	-webkit-box-shadow: 3px 3px 4px #CCC;
+	box-shadow: 3px 3px 4px #CCC;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+}
+
+#profileimage{
+	position:absolute;
 	top:10px;
-	background-color:lightgrey;
-	-moz-border-radius: 15px;
-	border-radius: 15px;
-
+	left:10px;
+	width:70px;
+	height:70px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
 }
 
-.pictureContainer
-{
-	float:left;
-	width:60px;
-	height:60px;
-	padding:5px;
+#profilename{
+	position:absolute;
+	top:0px;
+	left:90px;
 }
-.pictureProfile
-{
-	float:left;
-	width:60px;
-	height:60px;
-	-moz-border-radius: 15px;
-	border-radius: 15px;
-}
-.userName
-{
-	text-align:center;
 
+#profiletitle{
+	position:absolute;
+	top:18px;
+	left:90px;
+	max-width:150px;
+	font:Arial, Helvetica, sans-serif;
+	font-size:13px;
 }
-.alertCounter
-{
-	display:inline-block;
-	margin-left:5px;
-	float:left;
-	width:60px;
-	height:60px;
-	text-align:center;
-	-moz-border-radius: 15px;
-	border-radius: 15px;
-	background-image:url("earth.png");
-	vertical-align:center;
-	text-color:red;
-}
-.alertCounterText
-{
-	position:relative;
-	top:-12px;
-	color:red;
-}
-.otherPoints
-{
-	display:inline-block;
-	text-align:left;
-	padding-left:65px;	
-}
-.otherPointsPicture
-{
-	position:relative;
-	top:-20px;
-	left:-35px;
-	vertical-align:middle;
+
+#alertCounter{
+	background:#F00;
 	width:20px;
+	height:20px;
+	position:absolute;
+	left:63px;
+	top:63px;
+	text-align:center;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
 }
-.otherPointsValue
-{
-	position:relative;
-	top:-20px;
-	left:00px;
-	vertical-align:middle;
+#alertCounterText{
+	position:absolute;
+	left:3px;
+	top:-10px;
+	color:#FFF;
+	font:Arial, Helvetica, sans-serif;
+	font-size:13px;
+}
+
+
+#pointpic{
+	width:30px;
+	height:30px;
+	position:absolute;
+	left:10px;
+	top:90px;
+}
+
+#points{
+	position:absolute;
+	left:50px;
+	top:90px;
+	font:Arial, Helvetica, sans-serif;
+	font-size:24px;
+}
+
+
+#creditpic{
 	width:20px;
-	text-align:right;
+	height:20px;
+	position:absolute;
+	left:10px;
+	bottom:10px;
 }
-.score
-{
-	position:relative;
-	top:-40px;
-	
-	vertical-align:center;
-	padding-right:27px;
-	text-align:right;
+
+#credits{
+	position:absolute;
+	left:30px;
+	bottom:10px;
+	font:Arial, Helvetica, sans-serif;
+	font-size:13px;
+}
+
+#awardpic{
+	width:20px;
+	height:20px;
+	position:absolute;
+	left:120px;
+	bottom:10px;
+}
+
+#awards{
+	position:absolute;
+	left:140px;
+	bottom:10px;
+	font:Arial, Helvetica, sans-serif;
+	font-size:13px;
+}
+
+#linkpic{
+	width:20px;
+	height:20px;
+	position:absolute;
+	left:190px;
+	bottom:10px;
+}
+
+#links{
+	position:absolute;
+	left:210px;
+	bottom:10px;
+	font:Arial, Helvetica, sans-serif;
+	font-size:13px;
 }
