--- a/gamemap/style.css
+++ b/gamemap/style.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 body { 
-	margin: 0; padding: 0; width:100%; font-size:13px;
+	margin: 0px; padding: 0px; width:100%; font-size:13px;
 	color: #000;
 	font-family:Arial, sans-serif;
 	
@@ -16,10 +16,12 @@ header {
 	width:100%;
 	height:30px;
 	background-color:#c3c7ff;
-	z-index:6;"
+	z-index:6;
 }
 
 footer {
+	position:absolute;
+	bottom:0px;
 	width:100%;
 	height:150px;
 	background-color:#c3c7ff;
@@ -76,3 +78,32 @@ footer {
 #pastnotemenu{width:100%;list-style:none;padding:0;margin:0;top:0;position:absolute;height:100%;width:300px;z-index:inherit;}
 #pastnotemenu li{padding:4px 0;text-align:left;display:block;cursor:hand;cursor:pointer;z-index:inherit;}
 #pastnotemenu li p{background:url() repeat #1f1f1f;color:#ddd;font-family:helvetica,arial,verdana;font-size:9px;font-weight:900;display:inline;padding:5px 8px 5px 5px;text-decoration:none;z-index:inherit;}
+
+.bottomright{
+	background:#36C;
+	position:absolute;
+	right:15px;
+	bottom:5px;
+	z-index:2;
+	height:140px;
+	width:250px;
+	-moz-box-shadow: 3px 3px 4px #36C;
+	-webkit-box-shadow: 3px 3px 4px #36C;
+	box-shadow: 3px 3px 4px #36C;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+}
+
+
+.bottomstuff{
+	background:#36C;
+	z-index:2;
+	height:140px;
+	position:absolute;
+	top:5px;
+	-moz-box-shadow: 3px 3px 4px #36C;
+	-webkit-box-shadow: 3px 3px 4px #36C;
+	box-shadow: 3px 3px 4px #36C;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+}
