--- a/gamemap/style.css
+++ b/gamemap/style.css
@@ -5,7 +5,7 @@ body {
 	margin: 0px; padding: 0px; width:100%; font-size:13px;
 	color: #000;
 	font-family:Arial, sans-serif;
-	
+	overflow:hidden;
 }
 h3 {
 	font:Arial, Helvetica, sans-serif;
@@ -15,7 +15,7 @@ h3 {
 header {
 	width:100%;
 	height:30px;
-	background-color:#c3c7ff;
+	background-color:#424242;
 	z-index:6;
 }
 
@@ -79,21 +79,46 @@ footer {
 #pastnotemenu li{padding:4px 0;text-align:left;display:block;cursor:hand;cursor:pointer;z-index:inherit;}
 #pastnotemenu li p{background:url() repeat #1f1f1f;color:#ddd;font-family:helvetica,arial,verdana;font-size:9px;font-weight:900;display:inline;padding:5px 8px 5px 5px;text-decoration:none;z-index:inherit;}
 
+#menulistul{list-style:none;padding:0;margin:0;top:0;position:absolute;height:100%;width:300px;z-index:inherit;}
+#menulistul li{padding:1px 0;text-align:left;display:block;cursor:hand;cursor:pointer;z-index:inherit;}
+#menulistul li p{color:#000;font-family:helvetica,arial,verdana;font-size:12px;font-weight:900;display:inline;padding:5px 8px 5px 5px;text-decoration:none;z-index:inherit;}
+
 .bottomright{
-	background:#36C;
-	position:absolute;
-	right:15px;
-	bottom:5px;
-	z-index:2;
-	height:140px;
 	width:250px;
-	-moz-box-shadow: 3px 3px 4px #36C;
-	-webkit-box-shadow: 3px 3px 4px #36C;
-	box-shadow: 3px 3px 4px #36C;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
+	height:61px;
+	position:absolute;
+	background:url(profileback.png);
+	background-size:contain;
+	background-repeat:no-repeat;
+	right:-1px;
+	top:150px;
+	opacity:0;
+	z-index:2;
 }
 
+.plugconnection{
+	width:250px;
+	height:110px;
+	position:absolute;
+	background:url(unplugged.png);
+	background-repeat:no-repeat;
+	background-size:cover;
+	right:-1px;
+	top:50px;
+	opacity:0;
+	z-index:0;
+	
+	
+}
+
+#plugdesc{
+	vertical-align:center;
+	position:relative;
+	top:30px;
+	left:70px;
+	font-size:9px;
+	max-width:190px;
+}
 
 .bottomstuff{
 	background:#36C;
